# yt-comment-fetcher

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  MOCK_SERVER_ISSUE_REPORT_JA.md  MOCK_SERVER_PAGINATION_INVESTIGATION.md  README.md  docker-compose.yml  viewer.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
certs/: .gitignore  README.md  generate-certs.sh
crates/example/: Cargo.toml
crates/yt-grpc-client/: Cargo.toml  build.rs
crates/yt-grpc-client/src/: lib.rs
crates/yt-oauth/: Cargo.toml
crates/yt-oauth/src/: lib.rs
src/: main.rs  oauth.rs
tests/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json
tests/env/default/: default.properties  js.properties
tests/specs/: fetcher_auth.spec  fetcher_error_handling.spec  fetcher_failfast.spec  fetcher_file_output.spec  fetcher_graceful_shutdown.spec  fetcher_oauth.spec  fetcher_reconnection.spec  fetcher_stream.spec
tests/test-data/: api-key.txt
tests/tests/: step_implementation.js
