[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuge42/yt-comment-fetcher"
readme = "README.md"
authors = ["Asayu Yuge <43070221+yuge42@users.noreply.github.com>"]
description = "YouTube Live Comment Fetcher - A tool to fetch comments from YouTube live streams"

[workspace.dependencies]
# Add shared dependencies here to keep versions aligned across members.
