[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["."]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuge42/yt-comment-fetcher"
readme = "README.md"
authors = ["Asayu Yuge <43070221+yuge42@users.noreply.github.com>"]
description = "YouTube Live Comment Fetcher - A tool to fetch comments from YouTube live streams"

[workspace.dependencies]
# Add shared dependencies here to keep versions aligned across members.
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }

[package]
name = "yt-comment-fetcher"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
yt-grpc-client = { path = "crates/yt-grpc-client" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
