[package]
name = "yt-grpc-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
