[package]
name = "yt-grpc-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
